--- a/content/docs/getting-started/quickstart.mdx
+++ b/content/docs/getting-started/quickstart.mdx
@@ -11,8 +11,8 @@ Create your first AI agent in under 5 minutes with the ElizaOS CLI.
 
 Before you begin, ensure you have:
 
-- **Node.js** (v23.3.0 or higher)
-- **Bun** package manager
+- **Node.js** (v23.3.0 exact version required)
+- **Bun** package manager (v1.2.15 recommended)
 - **API Key** from OpenAI, Anthropic, or local AI setup
 - **Windows Users**: WSL 2 required
 
@@ -117,7 +117,7 @@ Now that your agent is running, you can:
 
 **Agent won't start?**
 - Verify your API key is correctly set
-- Check that Node.js v23.3.0+ is installed
+- Check that Node.js v23.3.0 (exact version) is installed
 - Ensure port 3000 is available
 
 **Agent not responding?**
