--- a/content/docs/core-concepts/agent-development/character-definition.mdx
+++ b/content/docs/core-concepts/agent-development/character-definition.mdx
@@ -144,10 +144,55 @@ const character = {
 ### messageExamples
 Conversation examples that demonstrate the character's communication style. These are used for training and consistency.
 
+<Callout type="info" title="v1.2.0 Format">
+The `messageExamples` format has been updated in v1.2.0. Each message must include a `name` field and a `content` object with a `text` field.
+</Callout>
+
 ```typescript
 interface MessageExample {
   name: string;
   content: Content;
+}
+
+interface Content {
+  /** Required: The text content of the message */
+  text: string;
+  
+  /** Optional: Providers to use for this message (e.g., KNOWLEDGE, TIME, NEWS) */
+  providers?: string[];
+  
+  /** Optional: Actions to perform (e.g., REPLY, GENERATE_IMAGE, SEND_TOKEN) */
+  actions?: string[];
+  
+  /** Optional: File attachments, images, or other media */
+  attachments?: Attachment[];
+  
+  /** Optional: Internal thought process (not shown to user) */
+  thought?: string;
+  
+  /** Optional: Source of the message */
+  source?: string;
+  
+  /** Optional: Target for the message */
+  target?: string;
+  
+  /** Optional: URL reference */
+  url?: string;
+  
+  /** Optional: Message this is replying to */
+  inReplyTo?: string;
+  
+  /** Optional: Channel type (discord, telegram, etc.) */
+  channelType?: string;
+  
+  /** Optional: Additional metadata */
+  metadata?: {
+    timestamp?: number;
+    userId?: string;
+    platform?: string;
+    threadId?: string;
+    conversationId?: string;
+  };
 }
 
 const character = {
@@ -156,22 +201,32 @@ const character = {
   messageExamples: [
     [
       {
-        name: "User",
-        content: { text: "What's the future of AI?" }
+        name: "{{user1}}",
+        content: { 
+          text: "What's the future of AI?"
+        }
       },
       {
         name: "Ada",
-        content: { text: "The future of AI is incredibly promising, but we must approach it thoughtfully. I see three key areas where AI will transform our world..." }
+        content: { 
+          text: "The future of AI is incredibly promising, but we must approach it thoughtfully. I see three key areas where AI will transform our world...",
+          providers: ["KNOWLEDGE"]
+        }
       }
     ],
     [
       {
-        name: "User",
-        content: { text: "How do neural networks learn?" }
+        name: "{{user1}}",
+        content: { 
+          text: "How do neural networks learn?"
+        }
       },
       {
         name: "Ada",
-        content: { text: "Great question! Neural networks learn through a process called backpropagation. Think of it like learning from mistakes..." }
+        content: { 
+          text: "Great question! Neural networks learn through a process called backpropagation. Think of it like learning from mistakes...",
+          actions: ["EXPLAIN_CONCEPT"]
+        }
       }
     ]
   ]
@@ -260,20 +315,33 @@ const character = {
 ### plugins
 Array of plugin names to load for this character.
 
+<Callout type="error" title="Plugin Order Critical">
+Plugin order is critical in v1.2.0. Always follow this exact order:
+1. `@elizaos/plugin-sql` (REQUIRED FIRST)
+2. Model provider plugin (e.g., `@elizaos/plugin-openai`)
+3. `@elizaos/plugin-bootstrap` (REQUIRED LAST)
+</Callout>
+
 ```typescript
 const character = {
   name: "Ada",
   bio: "An AI researcher",
   plugins: [
-    "plugin-bootstrap",
-    "plugin-web-search",
-    "plugin-arxiv"
+    "@elizaos/plugin-sql",        // MUST BE FIRST
+    "@elizaos/plugin-openai",     // Model provider
+    "@elizaos/plugin-bootstrap",  // MUST BE LAST
+    "@elizaos/plugin-web-search",
+    "@elizaos/plugin-arxiv"
   ]
 };
 ```
 
 ### settings
 General configuration settings for the character.
+
+<Callout type="warning" title="Environment Variables">
+In v1.2.0, use environment variables for sensitive settings and API keys.
+</Callout>
 
 ```typescript
 const character = {
@@ -287,10 +355,24 @@ const character = {
     // Boolean settings
     verbose: true,
     debug: false,
+    ragKnowledge: true,
     
     // Number settings
     maxTokens: 2000,
     temperature: 0.7,
+    
+    // Model configuration
+    model: "gpt-4",
+    modelConfig: {
+      temperature: 0.7,
+      maxInputTokens: 4096,
+      maxOutputTokens: 1024
+    },
+    
+    // Voice settings
+    voice: {
+      model: "en_US-female-medium"
+    },
     
     // Complex settings
     preferences: {
@@ -304,13 +386,25 @@ const character = {
 ### secrets
 Secure configuration that should be handled carefully.
 
+<Callout type="error" title="Security Warning">
+Never hardcode secrets in character files. Use environment variables in production.
+</Callout>
+
 ```typescript
 const character = {
   name: "Ada",
   bio: "An AI researcher",
   secrets: {
-    apiKey: "sk-...",
-    webhookUrl: "https://...",
+    // Use environment variables
+    OPENAI_API_KEY: "${OPENAI_API_KEY}",
+    ANTHROPIC_API_KEY: "${ANTHROPIC_API_KEY}",
+    DISCORD_TOKEN: "${DISCORD_TOKEN}",
+    
+    // Character-specific secrets
+    "CHARACTER.Ada.OPENAI_API_KEY": "${CHARACTER.Ada.OPENAI_API_KEY}",
+    
+    // Webhook configuration
+    webhookUrl: "${WEBHOOK_URL}",
     maxRetries: 3
   }
 };
@@ -352,6 +446,10 @@ const character = {
 
 ElizaOS provides comprehensive validation for character definitions using Zod schemas:
 
+<Callout type="info" title="v1.2.0 Validation">
+Validation functions have been updated in v1.2.0 with stricter requirements for plugin ordering and message format.
+</Callout>
+
 ```typescript
 import { validateCharacter, parseAndValidateCharacter } from '@elizaos/core';
 
@@ -362,10 +460,29 @@ if (result.success) {
   console.log('Character is valid:', result.data);
 } else {
   console.error('Validation failed:', result.error);
+  // Log specific validation errors
+  result.error.issues?.forEach(issue => {
+    console.error(`${issue.path.join('.')}: ${issue.message}`);
+  });
 }
 
 // Parse and validate JSON string
 const jsonResult = parseAndValidateCharacter(jsonString);
+
+// Validate plugin order specifically
+const validatePluginOrder = (plugins: string[]) => {
+  const requiredOrder = ['@elizaos/plugin-sql', 'model-provider', '@elizaos/plugin-bootstrap'];
+  const sqlIndex = plugins.findIndex(p => p === '@elizaos/plugin-sql');
+  const bootstrapIndex = plugins.findIndex(p => p === '@elizaos/plugin-bootstrap');
+  
+  if (sqlIndex !== 0) {
+    throw new Error('@elizaos/plugin-sql must be first');
+  }
+  
+  if (bootstrapIndex !== plugins.length - 1) {
+    throw new Error('@elizaos/plugin-bootstrap must be last');
+  }
+};
 ```
 
 ### Validation Schema Details
@@ -378,10 +495,10 @@ const uuidSchema = z
   .string()
   .regex(/^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$/i, 'Invalid UUID format');
 
-// Content validation for message examples
+// Content validation for message examples (v1.2.0)
 const contentSchema = z
   .object({
-    text: z.string().optional(),
+    text: z.string().min(1, 'Text content is required'),
     thought: z.string().optional(),
     actions: z.array(z.string()).optional(),
     providers: z.array(z.string()).optional(),
@@ -391,14 +508,35 @@ const contentSchema = z
     inReplyTo: uuidSchema.optional(),
     attachments: z.array(z.any()).optional(),
     channelType: z.string().optional(),
+    // v1.2.0 specific fields
+    metadata: z.object({
+      timestamp: z.number().optional(),
+      userId: z.string().optional(),
+      platform: z.string().optional(),
+    }).optional(),
   })
   .passthrough(); // Allow additional properties
 
-// Message example validation
+// Message example validation (v1.2.0)
 const messageExampleSchema = z.object({
-  name: z.string(),
+  name: z.string().min(1, 'Name is required'),
   content: contentSchema,
 });
+
+// Validate message examples format
+const validateMessageExamples = (examples: any[]) => {
+  examples.forEach((conversation, index) => {
+    if (!Array.isArray(conversation)) {
+      throw new Error(`Conversation ${index} must be an array`);
+    }
+    
+    conversation.forEach((message, msgIndex) => {
+      if (!message.name || !message.content || !message.content.text) {
+        throw new Error(`Message ${msgIndex} in conversation ${index} must have name and content.text`);
+      }
+    });
+  });
+};
 
 // Directory item validation for knowledge base
 const directoryItemSchema = z.object({
@@ -437,7 +575,7 @@ const settingsSchema = z.record(z.union([z.string(), z.boolean(), z.number(), z.
 // Secrets validation
 const secretsSchema = z.record(z.union([z.string(), z.boolean(), z.number()])).optional();
 
-// Main character schema with strict validation
+// Main character schema with strict validation (v1.2.0)
 export const characterSchema = z
   .object({
     id: uuidSchema.optional(),
@@ -445,13 +583,38 @@ export const characterSchema = z
     username: z.string().optional(),
     system: z.string().optional(),
     templates: z.record(templateTypeSchema).optional(),
-    bio: z.union([z.string(), z.array(z.string())]),
-    messageExamples: z.array(z.array(messageExampleSchema)).optional(),
+    bio: z.union([z.string(), z.array(z.string())]).refine(
+      (bio) => {
+        if (Array.isArray(bio)) {
+          return bio.length > 0 && bio.every(item => item.length > 0);
+        }
+        return bio.length > 0;
+      },
+      'Bio must not be empty'
+    ),
+    messageExamples: z.array(z.array(messageExampleSchema)).optional().refine(
+      (examples) => {
+        if (!examples) return true;
+        return examples.every(conversation => 
+          conversation.every(message => 
+            message.name && message.content && message.content.text
+          )
+        );
+      },
+      'All messageExamples must have name and content.text'
+    ),
     postExamples: z.array(z.string()).optional(),
     topics: z.array(z.string()).optional(),
     adjectives: z.array(z.string()).optional(),
     knowledge: z.array(knowledgeItemSchema).optional(),
-    plugins: z.array(z.string()).optional(),
+    plugins: z.array(z.string()).min(3, 'At least 3 plugins required (sql, model-provider, bootstrap)').refine(
+      (plugins) => {
+        const sqlIndex = plugins.findIndex(p => p === '@elizaos/plugin-sql');
+        const bootstrapIndex = plugins.findIndex(p => p === '@elizaos/plugin-bootstrap');
+        return sqlIndex === 0 && bootstrapIndex === plugins.length - 1;
+      },
+      'Plugin order must be: @elizaos/plugin-sql first, @elizaos/plugin-bootstrap last'
+    ),
     settings: settingsSchema,
     secrets: secretsSchema,
     style: styleSchema,
@@ -491,7 +654,7 @@ if (result.success) {
 ElizaOS provides type guards for runtime validation:
 
 ```typescript
-import { isValidCharacter } from '@elizaos/core';
+import { isValidCharacter, validateCharacterFile } from '@elizaos/core';
 
 // Type guard usage
 if (isValidCharacter(data)) {
@@ -500,6 +663,21 @@ if (isValidCharacter(data)) {
 } else {
   console.error('Invalid character data');
 }
+
+// File validation for JSON files
+const validateCharacterFromFile = async (filePath: string) => {
+  try {
+    const result = await validateCharacterFile(filePath);
+    if (result.success) {
+      return result.character;
+    } else {
+      throw new Error(result.error);
+    }
+  } catch (error) {
+    console.error('Character file validation failed:', error);
+    throw error;
+  }
+};
 ```
 
 ## Complete Character Example
@@ -532,22 +710,32 @@ const adaCharacter = {
   messageExamples: [
     [
       {
-        name: "User",
-        content: { text: "What's the biggest challenge in AI today?" }
+        name: "{{user1}}",
+        content: { 
+          text: "What's the biggest challenge in AI today?" 
+        }
       },
       {
         name: "Ada",
-        content: { text: "I'd argue it's the interpretability problem. We have incredibly powerful models, but we often can't explain WHY they make certain decisions. This is crucial for building trust and ensuring fairness." }
+        content: { 
+          text: "I'd argue it's the interpretability problem. We have incredibly powerful models, but we often can't explain WHY they make certain decisions. This is crucial for building trust and ensuring fairness.",
+          providers: ["KNOWLEDGE"]
+        }
       }
     ],
     [
       {
-        name: "User",
-        content: { text: "How do you approach AI ethics in your research?" }
+        name: "{{user1}}",
+        content: { 
+          text: "How do you approach AI ethics in your research?" 
+        }
       },
       {
         name: "Ada",
-        content: { text: "Ethics isn't an afterthought - it's woven into every stage of my research. I ask: Who might be affected? What biases might exist? How can we ensure transparency? These questions guide my methodology." }
+        content: { 
+          text: "Ethics isn't an afterthought - it's woven into every stage of my research. I ask: Who might be affected? What biases might exist? How can we ensure transparency? These questions guide my methodology.",
+          actions: ["ETHICAL_ANALYSIS"]
+        }
       }
     ]
   ],
@@ -599,10 +787,12 @@ const adaCharacter = {
   ],
   
   plugins: [
-    "plugin-bootstrap",
-    "plugin-web-search",
-    "plugin-arxiv",
-    "plugin-scholar"
+    "@elizaos/plugin-sql",        // REQUIRED FIRST
+    "@elizaos/plugin-openai",     // Model provider
+    "@elizaos/plugin-bootstrap",  // REQUIRED LAST
+    "@elizaos/plugin-web-search",
+    "@elizaos/plugin-arxiv",
+    "@elizaos/plugin-scholar"
   ],
   
   settings: {
@@ -616,8 +806,9 @@ const adaCharacter = {
   },
   
   secrets: {
-    arxiv_api_key: "key-123",
-    scholar_api_key: "key-456"
+    OPENAI_API_KEY: "${OPENAI_API_KEY}",
+    ARXIV_API_KEY: "${ARXIV_API_KEY}",
+    SCHOLAR_API_KEY: "${SCHOLAR_API_KEY}"
   },
   
   style: {
