--- a/content/docs/learning-tracks/simple/guides/character-creation.mdx
+++ b/content/docs/learning-tracks/simple/guides/character-creation.mdx
@@ -511,6 +511,48 @@ Save your character file as:
   </Folder>
 </Files>
 
+<Tabs items={["Basic Structure", "Advanced Structure", "Multi-Character"]}>
+<Tab value="Basic Structure">
+```
+my-agent/
+├── agent/
+│   └── character.json
+├── .env
+├── package.json
+└── README.md
+```
+</Tab>
+<Tab value="Advanced Structure">
+```
+my-agent/
+├── agent/
+│   ├── character.json
+│   └── knowledge/
+│       ├── general.md
+│       └── specific.md
+├── .env
+├── package.json
+├── tsconfig.json
+└── src/
+    └── index.ts
+```
+</Tab>
+<Tab value="Multi-Character">
+```
+my-agents/
+├── characters/
+│   ├── assistant.json
+│   ├── researcher.json
+│   └── creative.json
+├── .env
+├── package.json
+└── knowledge/
+    ├── shared/
+    └── specific/
+```
+</Tab>
+</Tabs>
+
 ## 🔄 Testing Your Character
 
 1. Save your changes
