Enhance ElizaOS migration documentation for v1.2.0 with comprehensive guides and scripts
- Added a new Migration Helper Scripts page to assist users with automated migration tasks.
- Introduced a detailed ElizaOS v1.2.0 Migration Guide covering breaking changes, step-by-step instructions, and new features.
- Updated index and meta files to include links to the new migration resources.
- Documented significant changes in API routing, plugin system, character schema, and runtime requirements for a smoother upgrade experience.

--- a/content/docs/migration/index.mdx
+++ b/content/docs/migration/index.mdx
@@ -9,9 +9,19 @@ This section contains guides for migrating between different versions of elizaOS
 
 ## Available Migration Guides
 
+- [ElizaOS v1.2.0 Migration Guide](/docs/migration/v1.2.0-migration) - **Complete upgrade guide** for migrating to v1.2.0 with breaking changes, automated tools, and step-by-step instructions
+- [Migration Helper Scripts](/docs/migration/migration-helper) - Ready-to-use scripts to automate common migration tasks
 - [API Migration Guide](/docs/migration/api-migration) - Migrate from old agent-specific APIs to the new centralized messaging system
 
 ## Breaking Changes
+
+### v1.2.0
+
+- **Domain-based API routing** - New centralized messaging system
+- **Enhanced plugin system** - Strict plugin ordering and new interface features
+- **Character schema updates** - Required plugin configuration and message format changes
+- **Runtime system improvements** - Mandatory database adapters and configuration changes
+- **Database adapter requirements** - All installations now require database adapters
 
 ### v1.0.0
 
